--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Learning Website</h1>
+<p>I am creating this website to learn web development.</p>
 
 </body>
 </html>
