--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <h1>Learning Website</h1>
 <p>I am creating this website to learn web development.</p>
-
+<script>
+    // Your JavaScript code goes here
+    console.log("Hello from JavaScript!");
+</script>
 </body>
 </html>
