--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Basic JavaScript Example</title>
+</head>
 <body>
+    <h1>Hello from HTML!</h1>
+    <button id="myButton">Click me</button>
 
-<h1>Learning Website</h1>
-<p>I am creating this website to learn web development.</p>
-<script>
-    // Your JavaScript code goes here
-    console.log("Hello from JavaScript!");
-</script>
+    <script src="script.js"></script>
 </body>
 </html>
