--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic JavaScript Example</title>
+    <title>Basic JavaScript</title>
 </head>
 <body>
     <h1>Hello from HTML!</h1>
