unable to get npm to work.  last comment before switching back to codespaces

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     </head>
     
     <body>
-        <hi>My Website</hi>
+        <h1>My Website</h1>
         <nav class="bg-sky-600 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
                 <div class="flex items-center justify-between md:w-auto w-full">
-                    <a href="https://drewray80.github.io/" class="pxy-5 px-2 text-white flex-1">Home</a>
-                    
+                    <a href="https://drewray80.github.io/" class="pxy-5 px-2 text-white flex-1"><img src="layouts\images\home.svg" alt="Clickable Image"></a>
+                    <div class="relative">
+                        <button type="button" class="dropdown-toggle py-2 px-3 hover:bg-sky-800 flex items-center gap-2 rounded">
+                            <span class="pointer-events-none">About</span>
+                        </button>
+                    </div>
                 </div>
             </div>
 
