fixed tailwind by running npx tailwindcss -i ./tailwindinput.css -o ./layouts/css/styles.css --watch in the terminal to rebuild the site for each change

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/styles.css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="layouts/css/styles.css" rel="stylesheet">
     </head>
     
     <body>
-        <h1>My Website</h1>
+        <h1 class="text-4xl font-bold underline">
+            My site
+        </h1>
         <nav class="bg-sky-600 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
                 <div class="flex items-center justify-between md:w-auto w-full">
