--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
         <h1 class="text-4xl font-bold underline">
-            My site
+            My website
         </h1>
         <nav class="bg-sky-600 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
