worked on dropdown

--- a/index.html
+++ b/index.html
@@ -27,13 +27,18 @@
 
             <!--Menu -->
             <div class="hidden md:flex-row flex-col items-center justify-start md:space-x-1 pb-3 md:pb-0 navigation-menu">
-                <button type="button" class="dropdown-toggle py-2j px-3 hover:bg-sky-800 flex items-center gap-2 rounded">
-                    <span class="pointer-events-none">About</span>
-                </button>
-                <div class="dropdown-menu absolute hidden bg-sky-700 text-white rounded-b-lg pb-2 w-48">
-                    <a href="#" class="block px-6 py-2 hover:bg-sky-800">Me</a>
-                    <a href="#" class="block px-6 py-2 hover:bg-sky-800">This Site</a>
+
+                <!-- Dropdown-->
+                <div class="relative">
+                    <button type="button" class="dropdown-toggle py-2j px-3 hover:bg-sky-800 flex items-center gap-2 rounded">
+                        <span class="pointer-events-none">About</span>
+                    </button>
+                    <div class="dropdown-menu absolute hidden bg-sky-700 text-white rounded-b-lg pb-2 w-48">
+                        <a href="#" class="block px-6 py-2 hover:bg-sky-800">Me</a>
+                        <a href="#" class="block px-6 py-2 hover:bg-sky-800">This Site</a>
+                    </div>
                 </div>
+                
             </div>
         </nav>
     </body>
