added about pages and copy/pasted nav bar to them

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -36,7 +36,7 @@
                             </svg>                            
                         </button>
                         <div class="dropdown-menu absolute hidden bg-sky-700 text-white rounded-b-lg pb-2 w-48">
-                            <a href="aboutMe.html" class="block px-6 py-2 hover:bg-sky-800">Me</a>
+                            <a href="pages/aboutMe.html" class="block px-6 py-2 hover:bg-sky-800">Me</a>
                             <a href="aboutSite.html" class="block px-6 py-2 hover:bg-sky-800">This Site</a>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
         </nav>
 
         <div>
-            <img src="layouts/images/canal.jpeg" alt="Picture of a canal at sunset">
+            <img src="layouts/images/mtn_boarder.jpeg" alt="Picture of a snowboard on top of a mountain">
         </div>
 
     </body>
