--- a/aboutSite.html
+++ b/aboutSite.html
@@ -50,7 +50,10 @@
         </nav>
 
         <div>
-            <img src="layouts/images/canal.jpeg" alt="Picture of a canal at sunset">
+            <p>I am just starting to build this website (in the winter of 2024/25).  
+                It will take me a while in my limited spare time to get it organized well.  
+                The intent of this site is to share teaching resources to anyone that would like to use them.  
+                I store resources on GitHub. I found that many K12 teachers are not familiar with GitHub.  Since navigating GitHub can be challenging, and I wanted to learn and practice more web development. I thought I would use this github pages to help visitors navigate my repro and share some projects that I am also working on. </p>
         </div>
 
     </body>
