--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
+<!-- npx tailwindcss -i ./tailwindinput.css -o ./layouts/css/styles.css --watch -->
+ <!-- https://www.youtube.com/watch?v=h_xmLBxS5SA -->
+ <!-- https://www.youtube.com/playlist?list=PL0Zuz27SZ-6M8znNpim8dRiICRrP5HPft -->
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ray's Resources</title>
         <link href="layouts/css/styles.css" rel="stylesheet">
         <script src="scripts/script.js"></script>
     </head>
     
-    <body>
+    <body class="w-full min-h-screen bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/mtn_boarder.jpeg')">
         <nav class="bg-sky-600 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
 
@@ -49,9 +53,22 @@
             </div>           
         </nav>
 
-        <div>
-            <img src="layouts/images/canal.jpeg" alt="Picture of a canal at sunset">
-        </div>
-
+        <main class="max-w-6xl mx-auto">
+            <section id="hero" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
+                <article class="sm:w-1/2 bg-slate-100/60 rounded-lg p-6">
+                    <h2 class="max-w-md text-7xl font-bond text-center sm:text-5xl sm:text-left text-slate-900"><span class="text-sky-900">Innovative Education</span> <br>
+                        for Computer Science.
+                    </h2>
+                    <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-900">
+                        I strive to find, tweak or create engaging educational resources for my cs courses.
+                    </p>
+                    <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-900">
+                        This website was created to share those resources.
+                    </p>
+                </article>
+                <!--<img src="layouts/images/mtn_boarder.jpeg" alt="Picture of snowboarder on top of a mountain">-->
+            </section>
+            <hr class="mx-auto bg-black w-1/2">
+        </main>
     </body>
 </html>
