--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     
     <body class="w-full min-h-screen bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/mtn_boarder.jpeg')">
-        <nav class="bg-sky-600 text-white">
+        <nav class="bg-sky-900 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
 
                 <!--Home Icon-->
@@ -59,11 +59,11 @@
                     <h2 class="max-w-md text-7xl font-bond text-center sm:text-5xl sm:text-left text-slate-900"><span class="text-sky-900">Innovative Education</span> <br>
                         for Computer Science.
                     </h2>
-                    <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-900">
-                        I strive to find, tweak or create engaging educational resources for my cs courses.
+                    <p class="text-2xl mt-4 text-center sm:text-left text-slate-900">
+                        I strive to "borrow", tweak or create engaging educational resources for my cs courses.
                     </p>
-                    <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-900">
-                        This website was created to share those resources.
+                    <p class="text-2xl mt-4 text-center sm:text-left text-slate-900">
+                        This website was created to share those resources with other educators.
                     </p>
                 </article>
                 <!--<img src="layouts/images/mtn_boarder.jpeg" alt="Picture of snowboarder on top of a mountain">-->
