added titles to about pages and added Educational Resources and Personal Projects to nav bar

--- a/aboutSite.html
+++ b/aboutSite.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About This Site</title>
         <link href="layouts/css/styles.css" rel="stylesheet">
         <script src="scripts/script.js"></script>
     </head>
@@ -41,8 +42,9 @@
                         </div>
                     </div>
                     
-                    <a href="#" class="py-2 px-3 block">Contact</a>
-
+                    <a href="#" class="py-2 px-3 block">Educational Resources</a>
+                    <a href="#" class="py-2 px-3 block">Personal Projects</a>
+                    
                 </div>
 
 
@@ -50,7 +52,7 @@
         </nav>
         <main class="max-w-8xl mx-auto">
             <section id="about-me" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
-                <article class="sm:w-1/2 bg-slate-100/60 rounded-lg p-6">
+                <article class="sm:w-1/2 bg-slate-100/80 rounded-lg p-6">
                     <h1 class="max-w-md text-4xl text-center sm:text-left text-slate-900 font-bold">Purpose of this site</h1>
                     <p class="text-2xl text-center sm:text-left text-slate-900">
                         Like many (probably most) K12 computer science teachers, I did not have a background in CS.  For the last 3 years, I have been learning CS concepts and testing various instructional resources.  
