--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
                         </div>
                     </div>
                     
-                    <a href="#" class="py-2 px-3 block">Contact</a>
-
+                    <a href="#" class="py-2 px-3 block">Educational Resources</a>
+                    <a href="#" class="py-2 px-3 block">Personal Projects</a>
+                    
                 </div>
-
-
             </div>           
         </nav>
 
