--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Me</title>
         <link href="layouts/css/styles.css" rel="stylesheet">
         <script src="scripts/script.js"></script>
     </head>
@@ -41,8 +42,9 @@
                         </div>
                     </div>
                     
-                    <a href="#" class="py-2 px-3 block">Contact</a>
-
+                    <a href="#" class="py-2 px-3 block">Educational Resources</a>
+                    <a href="#" class="py-2 px-3 block">Personal Projects</a>
+                    
                 </div>
 
 
@@ -50,7 +52,7 @@
         </nav>
         <main class="max-w-8xl mx-auto">
             <section id="about-me" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
-                <article class="sm:w-1/2 bg-slate-100/60 rounded-lg p-6">
+                <article class="sm:w-1/2 bg-slate-100/80 rounded-lg p-6">
                     <h1 class="max-w-md text-4xl text-center sm:text-left text-slate-900 font-bold">My Career Now</h1>
                     <p class="text-2xl text-center sm:text-left text-slate-900">
                         I am a high school computer science teacher.  I teach basic introduction CS courses using Python as the primary programming language. However, I try to present concepts in a general format that will be transferable to any programming languages.
