--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     
                     <a href="#" class="py-2 px-3 block">Educational Resources</a>
                     <a href="#" class="py-2 px-3 block">Personal Projects</a>
-                    
+                    <a href="https://github.com/drewray80" target="_blank" class="py-2 px-3 block">My GitHub</a>
+
                 </div>
             </div>           
         </nav>
