adjusted the mobile fonts to work correctly by using md:text-4xl instead of sm:text-2xl (with various sizes)

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,8 +8,8 @@
         <script src="scripts/script.js"></script>
     </head>
     
-    <body class="w-full min-h-screen bg-green-700 bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/harbor.jpeg')">
-        <nav class="bg-green-700 text-white">
+    <body class="w-full min-h-screen bg-green-900 bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/harbor.jpeg')">
+        <nav class="bg-green-900 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
 
                 <!--Home Icon-->
@@ -19,7 +19,7 @@
                     <!-- Mobile Menu-->
                     <div class="md:hidden flex items-center"> 
                         <button type="button" class="mobile-menu-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
                             </svg>
                         </button>     
@@ -54,14 +54,14 @@
         <main class="max-w-8xl mx-auto">
             <section id="about-me" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
                 <article class="sm:w-1/2 bg-slate-100/80 rounded-lg p-6">
-                    <h1 class="max-w-md text-4xl text-center sm:text-left text-slate-900 font-bold">My Career Now</h1>
-                    <p class="text-2xl text-center sm:text-left text-slate-900">
+                    <h1 class="max-w-md md:text-7xl text-center text-4xl sm:text-left text-slate-900 font-bold">My Career Now</h1>
+                    <p class="md:text-2xl text-center text-xl sm:text-left text-slate-900">
                         I am a high school computer science teacher.  I teach basic introduction CS courses using Python as the primary programming language. However, I try to present concepts in a general format that will be transferable to any programming languages.
                         <br>  
                         My primary goal is to give students the opportunity to learn useful skills in an engaging environment. I hope that my courses will encourage students who are interested in CS to be motivated to continue in the field.  For the students who are not interested in a career in CS, I hope they enjoy the course, and walk away with a basic understanding of CS that they could use in the future.
                     </p>
-                    <h1 class="max-w-md text-4xl mt-4 text-center sm:text-left text-slate-900 font-bold">My Career Experience</h1>
-                    <p class="text-2xl text-center sm:text-left text-slate-900">
+                    <h1 class="max-w-md md:text-7xl mt-4 text-center text-4xl sm:text-left text-slate-900 font-bold">My Career Experience</h1>
+                    <p class="md:text-2xl text-xl text-center sm:text-left text-slate-900">
                         In addition to teaching, I held several industry positions, such as a bank manager and an energy conservation consultant.  I use those experiences to help guide my instruction to be applicable for my students' future careers.
                     </p>
                 </article>
