--- a/aboutSite.html
+++ b/aboutSite.html
@@ -8,8 +8,8 @@
         <script src="scripts/script.js"></script>
     </head>
     
-    <body class="w-full min-h-screen bg-green-700 bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/canal.jpeg')">
-        <nav class="bg-green-700 text-white">
+    <body class="w-full min-h-screen bg-green-900 bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/canal.jpeg')">
+        <nav class="bg-green-900 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
 
                 <!--Home Icon-->
@@ -19,7 +19,7 @@
                     <!-- Mobile Menu-->
                     <div class="md:hidden flex items-center"> 
                         <button type="button" class="mobile-menu-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
                             </svg>
                         </button>     
@@ -54,14 +54,14 @@
         <main class="max-w-8xl mx-auto">
             <section id="about-me" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
                 <article class="sm:w-1/2 bg-slate-100/80 rounded-lg p-6">
-                    <h1 class="max-w-md text-4xl text-center sm:text-left text-slate-900 font-bold">Purpose of this site</h1>
-                    <p class="text-2xl text-center sm:text-left text-slate-900">
+                    <h1 class="max-w-md md:text-7xl text-4xl text-center sm:text-left text-slate-900 font-bold">Purpose of this site</h1>
+                    <p class="md:text-2xl text-xl text-center sm:text-left text-slate-900">
                         Like many (probably most) K12 computer science teachers, I did not have a background in CS.  For the last 3 years, I have been learning CS concepts and testing various instructional resources.  
                         <br>
                         I have added many of the resources that I found and developed to my GitHub repositories to help myself to organize my materials and to make them available for anyone that wants them.  GitHub can be very challenging to learn (I know from experience), and some of my projects can't be explained well in a github repo.  I created this site to help guide people through my resources and give additional context to the code.                        
                     </p>
-                    <h1 class="max-w-md text-4xl mt-4 text-center sm:text-left text-slate-900 font-bold">Why I wanted to build it</h1>
-                    <p class="text-2xl text-center sm:text-left text-slate-900">
+                    <h1 class="max-w-md md:text-7xl text-4xl mt-4 text-center sm:text-left text-slate-900 font-bold">Why I wanted to build it</h1>
+                    <p class="md:text-2xl text-center text-xl sm:text-left text-slate-900">
                         Computer science has become a fascination for me. I have enjoyed learning new aspects about CS to then share with my students.  I naturally like to build things, and creating software has been very enjoyable for me.  When I discovered GitHub pages, I decided this would be a great opportunity to build a modern website from scratch. 
                     </p>
                 </article>
