--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <script src="scripts/script.js"></script>
     </head>
     
-    <body class="w-full min-h-screen bg-green-700 bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/mtn_boarder.jpeg')">
-        <nav class="bg-green-700 text-white">
+    <body class="w-full min-h-screen bg-green-900 bg-top bg-cover bg-no-repeat" style="background-image: url('layouts/images/mtn_boarder.jpeg')">
+        <nav class="bg-green-900 text-white">
             <div class="container mx-auto px-4 md:flex items-center gap-6">
 
                 <!--Home Icon-->
                 <div class="flex items-center justify-between md:w-auto w-full">
-                    <a href="index.html" class="pxy-5 px-2 text-white flex-1 font-bold">Home</a>
+                    <a href="index.html" class="pxy-5 px-2 text-white flex-2 font-bold">Home</a>
                     
                     <!-- Mobile Menu-->
                     <div class="md:hidden flex items-center"> 
                         <button type="button" class="mobile-menu-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
                             </svg>
                         </button>     
@@ -56,13 +56,13 @@
         <main class="max-w-6xl mx-auto">
             <section id="hero" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
                 <article class="sm:w-1/2 bg-slate-100/60 rounded-lg p-6">
-                    <h2 class="max-w-md text-7xl font-bond text-center sm:text-5xl sm:text-left text-slate-900"><span class="text-sky-900">Innovative Education</span> <br>
+                    <h2 class="max-w-md md:text-7xl font-bond text-center text-5xl sm:text-left text-slate-900"><span class="text-sky-900">Innovative Education</span> <br>
                         for Computer Science.
                     </h2>
-                    <p class="text-2xl mt-4 text-center sm:text-left text-slate-900">
-                        I strive to "borrow", tweak or create engaging educational resources for my cs courses.
+                    <p class="md:text-2xl mt-4 text-center text-xl sm:text-left text-slate-900">
+                        I strive to find or create engaging educational resources for my CS courses.
                     </p>
-                    <p class="text-2xl mt-4 text-center sm:text-left text-slate-900">
+                    <p class="md:text-2xl mt-4 text-center text-xl sm:text-left text-slate-900">
                         This website was created to share those resources with other educators.
                     </p>
                 </article>
