--- a/aboutMe.html
+++ b/aboutMe.html
@@ -54,14 +54,14 @@
         <main class="max-w-8xl mx-auto">
             <section id="about-me" class="flex  justify-start sm:flex-row p-6 items-center gap-8 mb-12" >
                 <article class="sm:w-1/2 bg-slate-100/80 rounded-lg p-6">
-                    <h1 class="max-w-md md:text-7xl text-center text-4xl sm:text-left text-slate-900 font-bold">My Career Now</h1>
-                    <p class="md:text-2xl text-center text-xl sm:text-left text-slate-900">
+                    <h1 class="max-w-md md:text-4xl text-center text-3xl sm:text-left text-slate-900 font-bold">My Career Now</h1>
+                    <p class="md:text-xl text-center text-lg sm:text-left text-slate-900">
                         I am a high school computer science teacher.  I teach basic introduction CS courses using Python as the primary programming language. However, I try to present concepts in a general format that will be transferable to any programming languages.
                         <br>  
                         My primary goal is to give students the opportunity to learn useful skills in an engaging environment. I hope that my courses will encourage students who are interested in CS to be motivated to continue in the field.  For the students who are not interested in a career in CS, I hope they enjoy the course, and walk away with a basic understanding of CS that they could use in the future.
                     </p>
-                    <h1 class="max-w-md md:text-7xl mt-4 text-center text-4xl sm:text-left text-slate-900 font-bold">My Career Experience</h1>
-                    <p class="md:text-2xl text-xl text-center sm:text-left text-slate-900">
+                    <h1 class="max-w-md md:text-4xl mt-4 text-center text-3xl sm:text-left text-slate-900 font-bold">My Career Experience</h1>
+                    <p class="md:text-xl text-lg mt-2 text-center sm:text-left text-slate-900">
                         In addition to teaching, I held several industry positions, such as a bank manager and an energy conservation consultant.  I use those experiences to help guide my instruction to be applicable for my students' future careers.
                     </p>
                 </article>
