--- a/aboutMe.html
+++ b/aboutMe.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     
-                    <a href="#" class="py-2 px-3 block">Educational Resources</a>
+                    <a href="educationalResources.html" class="py-2 px-3 block">Educational Resources</a>
                     <a href="#" class="py-2 px-3 block">Personal Projects</a>
                     <a href="https://github.com/drewray80" target="_blank" class="py-2 px-3 block">My GitHub</a>
                     
