--- a/educationalResources.html
+++ b/educationalResources.html
@@ -1,22 +1,89 @@
  <!-- https://www.youtube.com/playlist?list=PL0Zuz27SZ-6M8znNpim8dRiICRrP5HPft -->
 
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="sm:scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educational Resources</title>
     <link rel="stylesheet" href="layouts/css/styles.css">
 </head>
 
-<body class="min-h-screen grid place-content-center radial-blue">
-    <div class="bg-emerald-500 w-52 h-52 rounded-full shadow-2xl grid place-content-center">
-        <div class="bg-teal-200 w-32 h-32 rounded-full grid place-content-center">
-            <div class="bg-red-500 w-16 h-16 rounded-full"></div>
-        </div>
-    </div>
-</body>
+<body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
+    <header class="bg-teal-700 text-white sticky top-0 z-10">
+        <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+            <h1 class="text-3xl font-medium">
+                <a href="#hero">🎓 Educational Resources</a>
+            </h1>
+            <div>
+                <button id="mobile-open-button" class="text-3xl sm:hidden focus:outline-none">
+                    &#9776;
+                </button>
+                <nav class="hidden sm:block space-x-8 text-xl" aria-label="main">
+                    <a href="#hardware" class="hover:opacity-80">Hardware</a>
+                    <a href="#colabs" class="hover:opacity-80">Colabs</a>
+                    <a href="#linuxCyber" class="hover:opacity-80">Linux/Cyber</a>
+                </nav>
+            </div>
+        </section>
+    </header>
+    <main class="max-w-4xl mx-auto">
+        <section id="hero" class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40">
+            <article class="sm:w-1/2">
+                <h2 class="max-w-md text-4xl font-bold text-center sm:text-5xl sm:text-left text-slate-900 dark:text-white">
+                    Resources <span class="text-indigo-700 dark:text-indigo-300"> I </span>use in my classroom.
+                </h2>
+                <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">
+                    Some of these resources are available to me because my program is well funded.  Some of these resources are free.
+                </p>
+                <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">
+                    You may need to make adjustments to match your resources.
+                </p>
+            </article>
+            <img class="w-1/2" src="./layouts/images/neonController.png" alt="neon sign game controller">
+        </section>
+        
+        <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
+        <section id="hardware" class="p-6 my-12 scroll-mt-20">
+            <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
+                Hardware
+            </h2>
+            <ul class="list-none mx-auto my-12 flex flex-col sm:flex-row items-center gap-8">
+                <li class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white dark:bg-black py-6 px-2 rounded-3xl shadow-xl">
+                    <img src="layouts/images/rvr.png" alt="Sphero RVR+ robot" class="mb-6 w-1/2">
+                    <h3 class="text-3xl text-center text-slate-900 dark:text-white">Sphero RVR+</h3>
+                    <p class="hidden sm:block text-3xl mt-2 text-center text-slate-500 dark:text-slate-400">Fun for beginners to advanced</p>
+                    <h3 class="sm:hidden text-2xl text-center mt-2 text-slate-500 dark:text-slate-400">Engaging</h3>
+                </li>
+                <li class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white dark:bg-black py-6 px-2 rounded-3xl shadow-xl">
+                    <img src="layouts/images/pi_led.png" alt="raspberry pi single board computer with leds attached" class="mb-6 w-1/2">
+                    <h3 class="text-3xl text-center text-slate-900 dark:text-white">Raspberry Pi</h3>
+                    <p class="hidden sm:block text-3xl mt-2 text-center text-slate-500 dark:text-slate-400">Can be used as computer or with other hardware</p>
+                    <h3 class="sm:hidden text-2xl text-center mt-2 text-slate-500 dark:text-slate-400">Single Board Computer</h3>
+                </li>
+                <li class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white dark:bg-black py-6 px-2 rounded-3xl shadow-xl">
+                    <img src="layouts/images/microbit.gif" alt="BBC microbit" class="mb-6 w-1/2">
+                    <h3 class="text-3xl text-center text-slate-900 dark:text-white">BBC Micro:bit</h3>
+                    <p class="hidden sm:block text-3xl mt-2 text-center text-slate-500 dark:text-slate-400">Micro controller with sensors, leds, speaker...</p>
+                    <h3 class="sm:hidden text-2xl text-center mt-2 text-slate-500 dark:text-slate-400">Useful for all levels</h3>
+                </li>
+            </ul>
+
+        <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+        <section id="colabs" class="p-6 my-12">
+            <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
+                Colabs
+            </h2>
+
+        <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+        <section id="linuxCyber" class="p-6 my-12">
+            <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">
+                Linux/Cyber
+            </h2>
+        </section>
+    </main>
+</body>
 </html>
