--- a/educationalResources.html
+++ b/educationalResources.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educational Resources</title>
     <link rel="stylesheet" href="layouts/css/styles.css">
+    <script src="scripts/main.js" defer></script>
 </head>
 
 <body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
@@ -16,17 +17,31 @@
                 <a href="#hero">🎓 Educational Resources</a>
             </h1>
             <div>
-                <button id="mobile-open-button" class="text-3xl sm:hidden focus:outline-none">
-                    &#9776;
+                <button id="hamburger-button" class="text-3xl md:hidden cursor-pointer relative w-8 h-8">
+                    <!-- &#9776; -->
+                     <div class="bg-white w-8 h-1 rounded absolute top-4 -mt-0.5 transition-all duration-500 before:content-[''] before:bg-white before:w-8 before:h-1 before:rounded before:absolute before:-translate-x-4 before:-translate-y-3 before:transition-all before:duration-500 after:content-[''] after:bg-white after:w-8 after:h-1 after:rounded after:absolute after:-translate-x-4 after:translate-y-3 after:transition-all after:duration-500"></div>
                 </button>
-                <nav class="hidden sm:block space-x-8 text-xl" aria-label="main">
+                <nav class="hidden md:block space-x-8 text-xl" aria-label="main">
                     <a href="#hardware" class="hover:opacity-80">Hardware</a>
                     <a href="#colabs" class="hover:opacity-80">Colabs</a>
                     <a href="#linuxCyber" class="hover:opacity-80">Linux/Cyber</a>
                 </nav>
             </div>
         </section>
+        <section id="mobile-menu" class="absolute top-68 bg-black w-full text-5xl flex-col justify-content-center origin-top animate-open-menu hidden">
+            <!-- <button class="text-8xl self-end px-6">
+                &times; 
+            </button> -->
+            <nav class="flex flex-col min-h-screen items-center py-8" aria-label="mobile">
+                <a href="#hero" class="w-full text-center py-6 hover:opacity-90">Home</a>
+                <a href="#hardware" class="w-full text-center py-6 hover:opacity-90">Hardware</a>
+                <a href="#colabs" class="w-full text-center py-6 hover:opacity-90">Colabs</a>
+                <a href="#linuxCyber" class="w-full text-center py-6 hover:opacity-90">Linux/Cyber</a>
+                <a href="#footer" class="w-full text-center py-6 hover:opacity-90">Footer</a>
+            </nav>
+        </section>
     </header>
+
     <main class="max-w-4xl mx-auto">
         <section id="hero" class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height">
             <article class="sm:w-1/2">
