created new index.html and setup basic nav

--- a/educationalResources.html
+++ b/educationalResources.html
@@ -27,9 +27,11 @@
             ></div>
           </button>
           <nav class="hidden md:block space-x-8 text-xl" aria-label="main">
+            <a href="index.html" class="hover:opacity-80">Home Page</a>
             <a href="#hardware" class="hover:opacity-80">Hardware</a>
             <a href="#colabs" class="hover:opacity-80">Colabs</a>
             <a href="#linuxCyber" class="hover:opacity-80">Linux/Cyber</a>
+            <a href="#hero" class="hover:opacity-80">Top</a>
           </nav>
         </div>
       </section>
@@ -44,8 +46,8 @@
           class="flex flex-col min-h-screen items-center py-8"
           aria-label="mobile"
         >
-          <a href="#hero" class="w-full text-center py-6 hover:opacity-90"
-            >Home</a
+          <a href="index.html" class="w-full text-center py-6 hover:opacity-90"
+            >Home Page</a
           >
           <a href="#hardware" class="w-full text-center py-6 hover:opacity-90"
             >Hardware</a
@@ -56,8 +58,8 @@
           <a href="#linuxCyber" class="w-full text-center py-6 hover:opacity-90"
             >Linux/Cyber</a
           >
-          <a href="#footer" class="w-full text-center py-6 hover:opacity-90"
-            >Footer</a
+          <a href="#hero" class="w-full text-center py-6 hover:opacity-90"
+            >Top</a
           >
         </nav>
       </section>
