moved info from about me and about site and added linux/cyber link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="min-h-screen bg-green-900 dark:bg-black dark:text-white">
     <header class="bg-green-900 text-white sticky top-0 z-10">
-        <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+        <section class="max-w-5xl mx-auto p-4 flex justify-between items-center">
           <h1 class="text-3xl font-medium">
             <a href="#hero">🎓 Ray's Resources</a>
           </h1>
@@ -58,5 +58,181 @@
           </nav>
         </section>
       </header>
+
+    <main class="max-w-7xl mx-auto">
+      <section
+        id="hero"
+        class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height"
+      >
+        <article class="sm:w-1/2">
+          <h2
+            class="max-w-md text-4xl font-bold text-center sm:text-5xl sm:text-left text-slate-900 dark:text-white"
+          >
+            <span class="text-sky-700 dark:text-sky-300">Innovative Education</span> <br />
+            for Computer Science.
+          </h2>
+          <p
+            class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-900 dark:text-slate-400"
+          >
+          I strive to find or create engaging educational resources for my CS
+          courses.
+          </p>
+          <p
+            class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-900 dark:text-slate-400"
+          >
+          This website was created to share those resources with other
+          educators.
+          </p>
+        </article>
+        <img
+          class="w-1/2 rounded-lg"
+          src="./layouts/images/mtn_boarder.jpeg"
+          alt="snowboarder on top of a mountain"
+        />
+      </section>
+
+      <hr class="mx-auto bg-black dark:bg-white w-1/2" />
+
+      <section
+        id="aboutMe"
+        class="flex flex-col justify-center p-6 my-12 scroll-mt-20 items-center widescreen:section-min-height tallscreen:section-min-height"
+      >
+        <h2
+          class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white"
+        >
+          About Me
+        </h2>
+        
+        <article class="flex flex-col justify-center sm:flex-row p-6 my-6">
+            <img
+            class="w-1/2 rounded-lg"
+            src="./layouts/images/harbor.jpeg"
+            alt="harbor at sunset"
+            />
+            <div class="mx-6">
+                <h3
+                class="md:text-4xl text-center text-3xl sm:text-left text-slate-900 dark:text-white font-bold p-3"
+                >
+                My Career Now
+                </h3>
+                <p class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
+                I am a high school computer science teacher. I teach basic
+                introduction CS courses using Python as the primary programming
+                language. However, I try to present concepts in a general format
+                that will be transferable to any programming languages.
+                <br />
+                My primary goal is to give students the opportunity to learn useful
+                skills in an engaging environment. I hope that my courses will
+                encourage students who are interested in CS to be motivated to
+                continue in the field. For the students who are not interested in a
+                career in CS, I hope they enjoy the course, and walk away with a
+                basic understanding of CS that they could use in the future.
+                </p>
+            </div>
+        </article>
+
+        <article class="flex flex-col-reverse justify-center sm:flex-row">
+            <div class="mx-6">
+                <h3
+                class="md:text-4xl text-center text-3xl sm:text-left text-slate-900 dark:text-white font-bold p-3"
+                >
+                My Career Experience
+                </h3>
+                <p
+                class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400"
+                >
+                In addition to teaching, I held several industry positions, such as
+                a bank manager and an energy conservation consultant. I use those
+                experiences to help guide my instruction to be applicable for my
+                students' future careers.
+                </p>
+            </div>
+            <img
+                class="w-1/2 rounded-lg"
+                src="./layouts/images/canal.jpeg"
+                alt="canal at sunset"
+                />
+          </article>
+          
+      </section>
+
+      <hr class="mx-auto bg-black dark:bg-white w-1/2" />
+
+      <section
+        id="aboutSite"
+        class="p-6 my-12 scroll-mt-16 widescreen:section-min-height tallscreen:section-min-height"
+      >
+        <h2
+          class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white"
+        >
+          About this Site
+        </h2>
+        <article>
+            <h3
+              class="max-w-md md:text-4xl text-3xl text-center sm:text-left text-slate-900  dark:text-white font-bold"
+            >
+              Purpose of this site
+            </h3>
+            <p class="md:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
+              Like many (probably most) K12 computer science teachers, I did not
+              have a background in CS. For the last 3 years, I have been learning
+              CS concepts and testing various instructional resources.
+              <br />
+              I have added many of the resources that I found and developed to my
+              GitHub repositories to help myself to organize my materials and to
+              make them available for anyone that wants them. GitHub can be very
+              challenging to learn (I know from experience), and some of my
+              projects can't be explained well in a github repo. I created this
+              site to help guide people through my resources and give additional
+              context to the code.
+            </p>
+            <h3
+              class="max-w-md md:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
+            >
+              Why I wanted to build it
+            </h3>
+            <p class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
+              Computer science has become a fascination for me. I have enjoyed
+              learning new aspects about CS to then share with my students. I
+              naturally like to build things, and creating software has been very
+              enjoyable for me. When I discovered GitHub pages, I decided this
+              would be a great opportunity to build a modern website from scratch.
+            </p>
+          </article>
+      </section>
+
+      <hr class="mx-auto bg-black dark:bg-white w-1/2" />
+
+      <section
+        id="github"
+        class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height"
+      >
+        <h2
+          class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white"
+        >
+          GitHub
+        </h2>
+        <article>
+            <h3
+              class="max-w-md md:text-4xl text-3xl text-center sm:text-left text-slate-900  dark:text-white font-bold"
+            >
+              What is GitHub?
+            </h3>
+            <p class="md:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
+              .
+              <br />
+              .
+            </p>
+            <h3
+              class="max-w-md md:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
+            >
+              My GitHub
+            </h3>
+            <p class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
+              .
+            </p>
+          </article>
+      </section>
+    </main>
 </body>
 </html>
