--- a/educationalResources.html
+++ b/educationalResources.html
@@ -11,8 +11,8 @@
   </head>
 
   <body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
-    <header class="bg-teal-700 text-white sticky top-0 z-10">
-      <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+    <header class="bg-green-900 text-white sticky top-0 z-10">
+      <section class="max-w-5xl mx-auto p-4 flex justify-between items-center">
         <h1 class="text-3xl font-medium">
           <a href="#hero">🎓 Educational Resources</a>
         </h1>
@@ -256,40 +256,13 @@
         <h2
           class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white"
         >
-          Linux/Cyber
+          Linux/Cyber Unit
         </h2>
-        <form
-          action=""
-          class="max-w-4xl mx-auto text-2xl sm:text-3xl flex flex-col items-left gap-4"
-        >
-          <!-- tutorial about forms and inputs https://youtu.be/frAGrGN00OA?si=TvkZdRHR3SlL9-O4 -->
-          <label for="subject">Subject:</label>
-          <input
-            type="text"
-            id="subject"
-            name="subject"
-            required
-            minlength="3"
-            maxlength="60"
-            placeholder="Your Subject"
-            class="w-full text-black text-2xl sm:text-3xl p-3 rounded-xl border border-solid border-slate-900 dark:border-none"
-          />
-          <label for="message">Message:</label>
-          <textarea
-            name="message"
-            id="message"
-            cols="30"
-            rows="10"
-            placeholder="Your Message"
-            required
-            class="w-full text-black text-2xl sm:text-3xl p-3 rounded-xl border border-solid border-slate-900 dark:border-none"
-          ></textarea>
-          <button
-            class="bg-teal-700 hover:bg-teal-600 active:bg-teal-500 text-white p-3 w-48 rounded-xl border border-solid border-slate-900 dark:border-none"
-          >
-            Submit
-          </button>
-        </form>
+        <p>
+          Link to my GitHub repo with details about my Linux/Cyber Unit.
+          <br>
+          <a href="https://github.com/drewray80/linux_cyber_unit" target="_blank" class="text-blue">github.com/drewray80/linux_cyber_unit</a>
+        </p>
       </section>
     </main>
 
