added github info and corrected <br>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- npx tailwindcss -i ./tailwindinput.css -o ./layouts/css/styles.css --watch -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,6 +62,7 @@
       </header>
 
     <main class="max-w-7xl mx-auto">
+      <!-- hero -->
       <section
         id="hero"
         class="flex flex-col-reverse justify-center sm:flex-row p-6 items-center gap-8 mb-12 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height"
@@ -93,6 +96,7 @@
 
       <hr class="mx-auto bg-black dark:bg-white w-1/2" />
 
+      <!-- aboutMe -->
       <section
         id="aboutMe"
         class="flex flex-col justify-center p-6 my-12 scroll-mt-20 items-center widescreen:section-min-height tallscreen:section-min-height"
@@ -120,7 +124,7 @@
                 introduction CS courses using Python as the primary programming
                 language. However, I try to present concepts in a general format
                 that will be transferable to any programming languages.
-                <br />
+                <br><br>
                 My primary goal is to give students the opportunity to learn useful
                 skills in an engaging environment. I hope that my courses will
                 encourage students who are interested in CS to be motivated to
@@ -145,6 +149,10 @@
                 a bank manager and an energy conservation consultant. I use those
                 experiences to help guide my instruction to be applicable for my
                 students' future careers.
+                <br />
+                As a banker, I dealt with a lot of businesses and I also have and MBA. I use this business experience to help students think about their projects from a business prospective. And I help them to think about how to monetize their current and future software projects.  
+                <br />
+                As an energy conservation consultant, I spent a lot of time optimizing HVAC systems to conserve energy. I ust this experience as example of programming uses that students may have not considered. And these physical applications of software are relatable and understandable for all students due to their prior experience.  
                 </p>
             </div>
             <img
@@ -158,6 +166,7 @@
 
       <hr class="mx-auto bg-black dark:bg-white w-1/2" />
 
+      <!-- aboutSite -->
       <section
         id="aboutSite"
         class="p-6 my-12 scroll-mt-16 widescreen:section-min-height tallscreen:section-min-height"
@@ -177,7 +186,7 @@
               Like many (probably most) K12 computer science teachers, I did not
               have a background in CS. For the last 3 years, I have been learning
               CS concepts and testing various instructional resources.
-              <br />
+              <br><br>
               I have added many of the resources that I found and developed to my
               GitHub repositories to help myself to organize my materials and to
               make them available for anyone that wants them. GitHub can be very
@@ -196,13 +205,15 @@
               learning new aspects about CS to then share with my students. I
               naturally like to build things, and creating software has been very
               enjoyable for me. When I discovered GitHub pages, I decided this
-              would be a great opportunity to build a modern website from scratch.
+              would be a great opportunity to build a modern website from scratch.  
+              So I built this site from scratch using basic html, javascript and tailwindcss.  
             </p>
           </article>
       </section>
 
       <hr class="mx-auto bg-black dark:bg-white w-1/2" />
 
+      <!-- github -->
       <section
         id="github"
         class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height"
@@ -219,17 +230,28 @@
               What is GitHub?
             </h3>
             <p class="md:text-xl text-lg text-center sm:text-left text-slate-900 dark:text-slate-400">
-              .
-              <br />
-              .
+              GitHub provides repository storage for code.  It is the primary location for storing all open source code.  
+              It also provides version control for programming, so even code that is not open source is stored on GitHub.  
+              It is such and important part of software development that MicroSoft purchased GitHub in 2018 to help insure that it will be maintained.  
+              GitHub is not the only option for these services, but it is by far the biggest in the industry.  
+              <br><br>
+              Due to the processed that GitHub provides, it can be difficult for beginners to understand.  
+              As I mentioned in my About this Site section, helping people understand my GitHub repos was a major reason for me to build this site.  
+              I also try to use GitHub whenever possible in my CS courses to help students gain experience.  
+              Having experience with GitHub is an important skill in the software development market.  
             </p>
             <h3
               class="max-w-md md:text-4xl text-3xl mt-4 text-center sm:text-left text-slate-900  dark:text-white font-bold"
             >
               My GitHub
             </h3>
+            <a href="https://github.com/drewray80" target="_blank" class="text-blue">github.com/drewray80</a>            
             <p class="md:text-xl text-center text-lg sm:text-left text-slate-900 dark:text-slate-400">
-              .
+              In my github account, I store educational resources and personal projects.  
+              The educational resources are stored there for other teachers to have access, and to have a central location for my own storage. It has also been a good source for learning for me to use the platform with a real goal and purpose.  
+              <br><br>
+
+
             </p>
           </article>
       </section>
